feat: 增加 `text` 类型文本解析 `strong`、`b`、`sup`、`sub`、`em`、`i`、`del`、`s`、`u` 标签

--- a/test/test.html
+++ b/test/test.html
@@ -1993,7 +1993,7 @@
                               {
                                 type: "text",
                                 options: {
-                                  text: "g/m2",
+                                  text: "g/m<sup>2</sup>",
                                   font: "Arial",
                                   break: 0,
                                 },
