--- a/test/test.html
+++ b/test/test.html
@@ -202,6 +202,7 @@
                         type: "text",
                         placeholder: "标题",
                         required: "",
+                        style: "width: 50%;",
                       },
                     },
                     size: 32,
@@ -226,6 +227,7 @@
                         type: "text",
                         placeholder: "副标题",
                         required: "",
+                        style: "width: 50%; margin-top: 10px;",
                       },
                     },
                     size: 24,
@@ -1825,7 +1827,7 @@
                                     field: "inspect.2.result",
                                     name: "span",
                                   },
-                                  text: "合格 PASS",
+                                  text: "合格\nPASS",
                                 },
                               },
                             ],
@@ -1929,7 +1931,7 @@
                                     field: "inspect.3.result",
                                     name: "span",
                                   },
-                                  text: "合格 PASS",
+                                  text: "合格\nPASS",
                                 },
                               },
                             ],
@@ -2268,7 +2270,7 @@
                                     field: "inspect.4.result",
                                     name: "span",
                                   },
-                                  text: "合格 PASS",
+                                  text: "合格\nPASS",
                                 },
                               },
                             ],
